--- a/apps/homepage/templates/homepage/home.html
+++ b/apps/homepage/templates/homepage/home.html
@@ -1,4 +1,42 @@
-{% extends "base.html" %}
+{% extends "homepage/base.html" %}
+{% load i18n %}
 
-<h1> Homepage </h1>
-
+{% block content %}
+<div class="intro-header">
+  <div class="container">
+    <div class="row">
+      <!-- xx -->
+      <div class="col-lg-12">
+        <div class="intro-message">
+          <h1>cashflow</h1>
+          <h3>A field-theory inspired approach to personal finance</h3>
+          <hr class="intro-divider">
+          {% if request.user.is_authenticated %}
+          <!-- user logged -->
+          <a href="#" class="btn btn-default btn-lg">
+            {% trans "Go to dashboard" %}
+          </a>
+          <!-- /user logged -->
+          {% else %}
+          <!-- user NOT logged -->
+          <ul class="list-inline">
+            <li>
+              <a href="{% url 'users:account_login' %}" class="btn btn-default btn-lg">
+                {% trans "Sign In" %}
+              </a>
+            </li>
+            <li>
+              <a href="{% url 'users:account_signup' %}" class="btn btn-default btn-lg">
+                {% trans "Sign Up" %}
+              </a>
+            </li>
+          </ul>
+          <!-- /user NOT logged -->
+          {% endif %}
+        </div>
+      </div>
+      <!-- /xx -->
+    </div>
+  </div>
+</div>
+{% endblock content%}
