--- a/apps/cashfield/templates/cashfield/list/transfer.html
+++ b/apps/cashfield/templates/cashfield/list/transfer.html
@@ -40,7 +40,11 @@
                 <tbody>
                 {% for object in object_list %}
                 <tr>
-                  <td>{{ object.name }}</td>
+                  <td>
+                    <a href="{% url 'cashfield:transfer_detail' object.id %}" class="btn btn-primary active">
+                      {{ object.name }}
+                    </a>
+                  </td>
                   <td>{{ object.channel }}</td>
                   <td>{{ object.start_value }}</td>
                   <td>{{ object.end_value }}</td>
