--- a/apps/cashfield/templates/cashfield/detail/transfer.html
+++ b/apps/cashfield/templates/cashfield/detail/transfer.html
@@ -5,10 +5,10 @@
   {% trans "transfer detail" %}
 {% endblock page_name %}
 {% block page_description %}
-  <a href="#" class="btn btn-primary active">
+  <a href="{% url 'cashfield:transfer_update' object.id %}" class="btn btn-primary active">
     <i class="fa fa-user" aria-hidden="true"></i> {% trans "Edit" %}
   </a>
-  <a href="#" class="btn btn-primary active">
+  <a href="{% url 'cashfield:transfer_delete' object.id %}" class="btn btn-primary active">
     <i class="fa fa-user" aria-hidden="true"></i> {% trans "Delete" %}
   </a>
 {% endblock page_description %}
