--- a/apps/cashfield/templates/cashfield/detail/container.html
+++ b/apps/cashfield/templates/cashfield/detail/container.html
@@ -33,7 +33,13 @@
               </br>
               {% trans "Channels OUT" %}: {{ object.source.count }}
               </br>
-              {% trans "Balance" %}:
+              {% trans "Balance" %}: {{ object.last_balance.amount }} ({% trans "last update" %} {{ object.last_balance.time|timesince }} {% trans "ago" %})
+              </br>
+              {% trans "Total IN" %}: {{ stats.total_in }} {{ object.currency }}
+              </br>
+              {% trans "Total OUT" %}: {{ stats.total_out }} {{ object.currency }}
+              </br>
+              {% trans "Net FLOW" %}: {{ stats.net_flow }} {{ object.currency }}
               </br>
             </div>
             <!-- /.box-body -->
