--- a/apps/cashfield/templates/cashfield/component/_main_sidebar.html
+++ b/apps/cashfield/templates/cashfield/component/_main_sidebar.html
@@ -35,6 +35,11 @@
                         <i class="fa {{ menu.icon_classes }}"></i> <span>{% trans "transfer" %}</span>
                     </a>
                 </li>
+                <li class="treeview">
+                    <a href="{% url 'cashfield:combo_home' %}">
+                        <i class="fa {{ menu.icon_classes }}"></i> <span>{% trans "combo" %}</span>
+                    </a>
+                </li>
             {% endblock nav_links %}
             {% endblock nav_links_outer %}
         </ul>
