--- a/apps/cashfield/templates/cashfield/detail/container.html
+++ b/apps/cashfield/templates/cashfield/detail/container.html
@@ -23,21 +23,11 @@
         <div class="col-md-4">
           <div class="box">
             <div class="box-header">
-              <h3 class="box-title">{% trans "IN" %}</h3>
-
-              <div class="box-tools">
-                <div class="input-group input-group-sm" style="width: 150px;">
-                  <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
-
-                  <div class="input-group-btn">
-                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                  </div>
-                </div>
-              </div>
+              <center><h3 class="box-title">{% trans "IN" %}</h3></center>
             </div>
             <!-- /.box-header -->
             <div class="box-body table-responsive no-padding">
-              <table class="table table-hover">
+              <table class="table table-hover" width="100%" border="1px" cellpadding="0" cellspacing="0">
                 <tbody><tr>
                   <th>Container</th>
                   <th>Channel</th>
@@ -45,13 +35,19 @@
                 </tr>
                 {% for c in stats.ch_in %}
                 <tr>
-                  <td align="center" valign="middle" style="background-color:#6483c1; solid #44619a;">
-                    <a href="{% url 'cashfield:container_detail' c.source.id %}" style="display:block;color:#FFFFFF;">
-                      <font size="2" color="#ffffff"><b>{{ c.source }}</b></font>
+                  <td align="center" valign="middle" style="background-color:#6483c1; border:1px solid #44619a;">
+                    <a href="{% url 'cashfield:container_detail' c.source.id %}" style="padding:1px; display:block;color:#FFFFFF; text-decoration:none;"><font color="#ffffff">{{ c.source }}</font></a>
+                  </td>
+                  <td align="center" valign="middle" style="background-color:#6483c1; border:1px solid #44619a;">
+                    <a href="{% url 'cashfield:channel_detail' c.id %}" style="padding:1px; display:block;color:#FFFFFF; text-decoration:none;" data-toggle="tooltip" data-original-title="{{ c.name }}">
+                      <font color="#ffffff"><i class="fa fa-arrow-right" aria-hidden="true"></i></font>
                     </a>
                   </td>
-                  <td>{{ c.name }}</td>
-                  <td style="white-space:nowrap;">{{ c.total_out }}</td>
+                  <td align="center" valign="middle" style="background-color:#6483c1; border:1px solid #44619a; white-space:nowrap;">
+                    <a href="#" style="padding:1px; display:block;color:#FFFFFF; text-decoration:none;">
+                      <font color="#ffffff">{{ c.total_out }}</font>
+                    </a>
+                  </td>
                 </tr>
                 {% endfor %}
               </tbody></table>
@@ -109,7 +105,7 @@
 
           <!-- balance -->
           <div class="info-box bg-yellow">
-            <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
+            <span class="info-box-icon"><i class="fa fa-balance-scale" aria-hidden="true"></i></span>
 
             <div class="info-box-content">
               <span class="info-box-text">{% trans "Balance" %}</span>
@@ -174,21 +170,11 @@
         <div class="col-md-4">
           <div class="box">
             <div class="box-header">
-              <h3 class="box-title">{% trans "OUT" %}</h3>
-
-              <div class="box-tools">
-                <div class="input-group input-group-sm" style="width: 150px;">
-                  <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
-
-                  <div class="input-group-btn">
-                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                  </div>
-                </div>
-              </div>
+              <center><h3 class="box-title">{% trans "OUT" %}</h3></center>
             </div>
             <!-- /.box-header -->
             <div class="box-body table-responsive no-padding">
-              <table class="table table-hover">
+              <table class="table table-hover" width="100%" border="1px" cellpadding="0" cellspacing="0">
                 <tbody><tr>
                   <th>total</th>
                   <th>Channel</th>
@@ -196,16 +182,24 @@
                 </tr>
                 {% for c in stats.ch_out %}
                 <tr>
-                  <td style="white-space:nowrap;">{{ c.total_in }}</td>
-                  <td>{{ c.name }}</td>
-                  <td align="center" valign="middle" style="background-color:#6483c1; solid #44619a;">
-                    <a href="{% url 'cashfield:container_detail' c.destination.id %}" style="display:block;color:#FFFFFF;">
-                      <font size="2" color="#ffffff"><b>{{ c.destination }}</b></font>
+                  <td align="center" valign="middle" style="background-color:#6483c1; border:1px solid #44619a; white-space:nowrap;">
+                    <a href="#" style="padding:1px; display:block;color:#FFFFFF; text-decoration:none;">
+                      <font color="#ffffff">{{ c.total_in }}</font>
                     </a>
+                  </td>
+                  <td align="center" valign="middle" style="background-color:#6483c1; border:1px solid #44619a;">
+                    <a href="{% url 'cashfield:channel_detail' c.id %}" style="padding:1px; display:block;color:#FFFFFF; text-decoration:none;" data-toggle="tooltip" data-original-title="{{ c.name }}">
+                      <font color="#ffffff"><i class="fa fa-arrow-right" aria-hidden="true"></i></font>
+                    </a>
+                  </td>
+                  <td align="center" valign="middle" style="background-color:#6483c1; border:1px solid #44619a;">
+                    <a href="{% url 'cashfield:container_detail' c.destination.id %}" style="padding:1px; display:block;color:#FFFFFF; text-decoration:none;"><font color="#ffffff">{{ c.destination }}</font></a>
                   </td>
                 </tr>
                 {% endfor %}
               </tbody></table>
+
+
             </div>
             <!-- /.box-body -->
           </div>
@@ -217,3 +211,13 @@
     <!-- /.content -->
 
 {% endblock content %}
+
+{% block page_javascript %}
+  <script>
+    $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip({
+        placement : 'top'
+      });
+    });
+  </script>
+{% endblock page_javascript %}
