--- a/apps/cashfield/templates/cashfield/detail/container.html
+++ b/apps/cashfield/templates/cashfield/detail/container.html
@@ -41,7 +41,14 @@
         <div class="col-md-4">
           <div class="box">
             <div class="box-header">
-              <center><h3 class="box-title">{% trans "IN" %}</h3></center>
+              <center>
+                <h3 class="box-title">
+                  {% trans "IN" %}  
+                  <a href="#" class="btn btn-primary active">
+                    <i class="fa fa-user" aria-hidden="true"></i> {% trans "New incoming" %}
+                  </a>                  
+                </h3>
+              </center>
             </div>
             <!-- /.box-header -->
             <div class="box-body table-responsive no-padding">
@@ -192,7 +199,14 @@
         <div class="col-md-4">
           <div class="box">
             <div class="box-header">
-              <center><h3 class="box-title">{% trans "OUT" %}</h3></center>
+              <center>
+                <h3 class="box-title">
+                  {% trans "OUT" %}
+                  <a href="#" class="btn btn-primary active">
+                    <i class="fa fa-user" aria-hidden="true"></i> {% trans "New outcoming" %}
+                  </a>                      
+                </h3>
+              </center>
             </div>
             <!-- /.box-header -->
             <div class="box-body table-responsive no-padding">
