--- a/apps/cashfield/templates/cashfield/detail/channel.html
+++ b/apps/cashfield/templates/cashfield/detail/channel.html
@@ -80,6 +80,16 @@
             </div>
           </div>
           <!-- /info -->
+          
+          <!-- bottone per nuovo transfer -->
+          <div>
+  <a href="{% url 'cashfield:transfer_add' %}" class="btn btn-primary active">
+    <i class="fa fa-user" aria-hidden="true"></i> {% trans "New" %}
+  </a>          
+          </div>
+          <!-- /bottone per nuovo transfer -->
+                    
+          
         </div>
         <!-- /middle column -->
 
